bugfix. scrollbar: smooth scroll on touch devices

--- a/src/Components/Scrollbar.css
+++ b/src/Components/Scrollbar.css
@@ -35,3 +35,13 @@
 .scrollbar-dark .ps__rail-y.ps--clicking {
     background-color: rgba(255, 255, 255, 0.05);
 }
+
+.scrollbar-light,
+.scrollbar-dark,
+.scrollbar-touch {
+    -webkit-overflow-scrolling: touch;
+}
+
+.scrollbar-touch {
+    overflow-y: auto !important;
+}
